--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -2,6 +2,8 @@
 
 \usepackage{pgfplots}
 \usepackage{bookmark}
+\usepackage{booktabs}
+\usepackage{array}
 \usepackage{hyperref}
 \usepackage{enumitem}
 \usepackage{graphicx}
