Add additional subsections to methodology

--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -24,6 +24,7 @@
 
 \renewcommand{\thesection}{\arabic{section}}
 \renewcommand{\thefigure}{\arabic{figure}}
+\renewcommand{\thetable}{\arabic{table}}
 
 \lstset{language=C++,
                 basicstyle=\ttfamily,
