--- a/proposal/content.tex
+++ b/proposal/content.tex
@@ -49,6 +49,7 @@ An example of how this may be applicable is in the altitude calculations. The mo
 \end{questions}
 
 \section{Methodology}
+\subsection{Functional breakdown}
 The high-level flow chart shown in Figure~\ref{fig:flowchart-high_level} depicts how raw sensor data is to be captured and transmitted from a firmware perspective.  The purpose of the flow chart is to guide avionics on how data is to be logged and transmitted to enable post flight analysis and verification. The system is primarily broken down into a high-resolution interval at 500Hz and low-resolution interval at 50Hz. 
 
 These resolution intervals are intended to match with Blue Raven intervals in order to sync and compare data sets post flights. The Blue Raven data will act as benchmark to determine the accuracy of data collected from various sensors of the avionics unit. Logging of data will be triggered based on a launch event recorded from the Blue Raven to enable both systems to collect data simultaneously. 
@@ -72,6 +73,72 @@ At the low-resolution interval, the system reads data from a barometer, which in
 
 A number of alternate design methods were considered which included a separate logging interval where transmission and saving to flash occurred over a separate time frame. Although having a different interval provides greater control, flash writing and LoRa transmission occurring during on the low-resolution interval simplifies the design, consolidating data handling tasks.  
 
+\subsection{Data storage and handling}
+\subsubsection{Dataframe structure}\label{sec:dataframe-structure}
+Figure~\ref{fig:dataframe-structure} provides a bytefield structure for the dataframes being constructed from the on-board avionics sensors. Each frame contains a two-byte header that identifies the type of data recorded in the payload (e.g. high resolution, low resolution or rocket payload data), describes the number of bytes contained within the payload, and provides a synchronisation byte for post processing.\\[0.5em]
+
+\begin{figure}[h]
+  \begin{center}\hspace{4.5em}
+  \begin{bytefield}[bitwidth=2em, endianness=big]{8}
+    \bitheader{0,5,6,7}\\
+    \begin{rightwordgroup}{Header}
+      \bitbox{2}[bgcolor=bittersweet]{ID} 
+      \bitbox{6}[bgcolor=aquamarine]{length}\\
+      \wordbox{1}[bgcolor=aquamarine]{Sync} 
+    \end{rightwordgroup}\\
+    \begin{rightwordgroup}{Payload}
+      \wordbox{1}{$D_0$[15:8]}\\
+      \wordbox{1}{$D_0$[7:0]}\\
+      \wordbox{1}{$D_1$[15:8]}\\
+      \wordbox[lrt]{1}{}\\
+      \cskippedwords{blue!20}\\
+      \wordbox[lrb]{1}{}\\
+      \wordbox{1}{$D_n$[7:0]}
+    \end{rightwordgroup}
+  \end{bytefield}
+  \end{center}
+  \caption{Dataframe structure for avionics}
+  \label{fig:dataframe-structure}
+\end{figure}
+
+These dataframes will be stored within a \verb|uint8_t| buffer as opposed to a 16-bit equivalent. This is because some sensor data is contained within 24 bits per sample, so to make efficient use of space while maintaining simplicity of implementation 8-bit nibbles are desirable.
+
+\subsubsection{Data typing}\label{sec:data-typing}
+Data stored by the avionics system will retain the raw structure as output by the on-board sensors, written as 8-bit unsigned blocks. This is to minimise the amount of storage used with each frame, as well as to avoid any processing overhead from computing real data. 
+
+Processing can then be done offline during analysis to obtain real data, for example by multiplying out the sensitivity of a given sensor into a floating point variable.
+
+\begin{figure}[h]
+  \begin{center}\hspace{4.5em}
+  \begin{bytefield}[endianness=big]{16}
+    \bitheader{0,15}\\
+    \begin{rightwordgroup}{X-axis}
+      \bitbox{8}[]{Upper nibble} 
+      \bitbox{8}[]{Lower nibble} 
+    \end{rightwordgroup}\\
+    \begin{rightwordgroup}{Y-axis}
+      \bitbox{8}[]{Upper nibble} 
+      \bitbox{8}[]{Lower nibble} 
+    \end{rightwordgroup}\\
+    \begin{rightwordgroup}{Z-axis}
+      \bitbox{8}[]{Upper nibble} 
+      \bitbox{8}[]{Lower nibble} 
+    \end{rightwordgroup}
+  \end{bytefield}
+  \end{center}
+  \caption{Example structure for a single sensor payload}
+  \label{fig:payload-structure}
+\end{figure}
+
+The payload of each dataframe will consist of consecutive groupings of sensor data, an example of which is pictured in Figure~\ref{fig:payload-structure}. No delimiter will be used to separate these groupings and instead processing will be performed by using an agreed upon structure. 
+
+Code that processes this data will need to read in each dataframe from memory, using the length field in the header to delimit where the data ends. Based on the type information from the frame header, each variable of data can then be read.
+
+\section{Synchronisation}\label{sec:synchronisation}
+According to the Blue Raven user's guide \cite{adamson_2023}, synchronisation between high and low resolution data is achieved through a "sync code" that is stored with the data. This code is essentially a counter that increments with each millisecond, with overflow at a count of 250. 
+
+To maintain synchronisation both with datasets collected by Aurora V avionics, as well as with the Blue Raven data (for the sake of comparison), an identical solution will be implemented within the logging system. As outlined in Section~\ref{sec:dataframe-structure}, this sync code is included as a full byte in the frame header, following the id and frame length. This byte will be included with all forms of saved data to maintain synchronisation parity across the board.
+
 \subsection{Mid-flight processing}
 
 \section{Risk assessment}
@@ -79,7 +146,7 @@ From an occupational health and safety perspective, the risks associated with th
 
 While these interactions may introduce physical hazards such as the risk of electrical shocks or injury from handling equipment, hardware is to be handled in RMIT Laboratory rooms where proper procedures and PPE will be utilized. Hardware will also be regularly inspected and maintenance to help identify and address potential safety hazards proactively.  
 
-As data analysis and verification is heavily reliant on the avionic hardware, there are foreseeable risks that may impact how data analysis and verification is approached. The figure below outlines possible risks and contingency strategies to ensure project deliverables are met.  
+As data analysis and verification is heavily reliant on the avionic hardware, there are foreseeable risks that may impact how data analysis and verification is approached. Table~\ref{tab:risk} outlines possible risks and contingency strategies to ensure project deliverables are met.  
 
 \begin{table}[]
 \centering
@@ -117,4 +184,15 @@ Integration Challenges with ground communication and real-time processing & Medi
 \end{itemize}\\
 \bottomrule
 \end{tabular}
+\caption{Risk assessment}\label{table:risk}
 \end{table}
+
+\subsection{Ethical considerations}
+
+As this project is primarily focused on data analysis and verification through software, ethical considerations are minimal. However, due to the nature of the aerospace and the work conducted, some considerations are as follows.   
+
+Although the test flights and the official AURC competition are held in controlled environments with safety precaution in place, the real-time data logged through LoRa may play a factor in identifying a potential safety risk.  
+
+Over the course of multiple Aurora flights, a large amount of data will be collected and stored. It should be ensured that the data and analysis should be only used for its intended purposes. As this work is conducted under RMIT and the HIVE association, these stakeholders should be consulted before data is shared externally. 
+
+The Aurora team is made of five subsystems with a total of over thirty members from different backgrounds and walks of life. Ethical collaboration is essential to ensure that all team members are treated with respect and have equal opportunities to contribute to the project. Open communication among team members should be encouraged to create a culture of inclusivity. 
