Add Jeremy's additions to tooling section, make adjustments to tool list

--- a/proposal/content.tex
+++ b/proposal/content.tex
@@ -1,4 +1,8 @@
-\section{Summary}
+\addcontentsline{toc}{section}{\textbf{Summary}}
+\begin{abstract}
+   
+\end{abstract}
+
 \section{Problem statement}
 The Data Analytics and Verification team is to operate as a subset within the AURC Avionics Team for the HIVE Aurora V rocket project. This subsystem's primary objective is to design, test, and validate data analytics processes for the avionics, ground communications, redundant electronic systems, and payload systems.  
 
@@ -15,11 +19,13 @@ Data analytics and verification processes will include:
 
 
 \subsection{Tools to Undertake Data Analytics and Verification}
+Due to the nature of work, most tools will be software based. The processor of the microcontroller will influence which integrated development environment (IDE) will be used. Tools such Arduino IDE, Visual Studio IDE and Microchip studio will most likely be utilized for development. Although the use of code libraries should be avoided to maintain low level control of the avionics system, some libraries may be utilized to act as a starting point. For version control and collaboration, Git will be used throughout the course of the project. A list of tools that will be required to complete the project includes:
+
 \begin{itemize}
-  \item Github  
-  \item Arduino IDE, Visual Studio IDE  
-  \item Arduino libraries  
-  \item Python libraries  
+  \item Git version control
+  \item Integrated Development Environments including Arduino and STM32CubeIDE
+  \item Arduino and Python libraries for prototyping, testing, and offline data processing 
+  \item Embedded systems analysis tools such as debug probes and logic analysers
 \end{itemize}
 
 \section{Background and literature review}
