--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -103,6 +103,7 @@
   \addcontentsline{toc}{part}{Contents}
   \tableofcontents*
   \clearpage
+  \renewcommand{\abstractname}{Summary}
 
   \markboth{}{}
   \input{content}
