Add finishing touches to methodology

--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -40,6 +40,7 @@
 {\begingroup
   \centering
   {\Huge Assessment Task #2:\\#3\par}\\[\baselineskip]
+  {\Large HIVE AURC AVIONICS (Data Analytics and Verification)}\\[\baselineskip]
   {\small\scshape RMIT University}\par
   {\small\scshape #4}\par\vspace{0.5em}
   {\large Supervisor: #1}\par\vspace{0.5em}
