--- a/proposal/proposal.bib
+++ b/proposal/proposal.bib
@@ -47,3 +47,13 @@
   journal={NAR Research and Development Report},
   year={2004}
 }
+
+@misc{about,
+  title = {Open MCT},
+  howpublished = {\url{https://github.com/nasa/openmct}},
+  urldate = {2024-04-07},
+  organization = {nasa.github.io},
+  journal = {Github repository},
+  author = {NASA}
+}
+
