Minor grammar and phrasing adjustments

--- a/proposal/content.tex
+++ b/proposal/content.tex
@@ -1,6 +1,6 @@
 \addcontentsline{toc}{section}{\textbf{Summary}}
 \begin{abstract}
-Data analytics and verification is a subset of Avionics within the Aurora V Rocketry team, representing RMIT University in the 2024 Australian Universities Rocket Competition (AURC). Work conducted within this subsystem makes up the Capstone project with the aim to design, test, and validate data analytics for the avionics, ground communications, redundant electronic and payload systems. The aim of this proposal is to offer background research and a high-level overview of the methodologies and risks that are involved. The project will span across the launch of five Aurora Rocket, with each providing an opportunity to collect and analyse sensor data. From an analysis and verification perspective, previous Rocketry project have used techniques such as Kalman Filters and Sensor fusion for post flight data processing. Similar techniques will likely be employed for data analysis. Lastly, a number of risks and ethical considerations have been identified to ensure the responsible implementation of data analytics and verification processes.  
+Data analytics and verification is a subset of Avionics within the Aurora V Rocketry team, representing RMIT University in the 2024 Australian Universities Rocket Competition (AURC). Work conducted within this subsystem makes up the Capstone project with the aim to design, test, and validate data analytics for the avionics, ground communications, redundant electronic and payload systems. The aim of this proposal is to offer background research and a high-level overview of the methodologies and risks that are involved. The project will span across the launch of five rockets, with each providing an opportunity to collect and analyse sensor data. From an analysis and verification perspective, previous Rocketry projects have used techniques such as Kalman Filters and Sensor fusion for post flight data processing. Similar techniques will likely be employed for data analysis. Lastly, a number of risks and ethical considerations have been identified to ensure the responsible implementation of data analytics and verification processes.  
 \end{abstract}
 
 \section{Problem statement}
@@ -20,7 +20,7 @@ Data analytics and verification processes will include:
 
 
 \subsection{Tools to Undertake Data Analytics and Verification}
-Due to the nature of work, most tools will be software based. The processor of the microcontroller will influence which integrated development environment (IDE) will be used. Tools such Arduino IDE, Visual Studio IDE and Microchip studio will most likely be utilized for development. Although the use of code libraries should be avoided to maintain low level control of the avionics system, some libraries may be utilized to act as a starting point. For version control and collaboration, Git will be used throughout the course of the project. A list of tools that will be required to complete the project includes:
+Due to the nature of work, most tools will be software based. The processor of the microcontroller will influence which integrated development environment (IDE) will be used. Tools such Arduino IDE, Visual Studio and STM32CubeIDE will most likely be utilized for development. Although the use of code libraries should be avoided to maintain low level control of the avionics system, some libraries may be utilized to act as a starting point and to speed up prototyping and development where necessary. For version control and collaboration, Git will be used throughout the course of the project. A list of tools that will be required to complete the project includes:
 
 \begin{itemize}
   \item Git version control
@@ -88,9 +88,9 @@ While flash memory can only be analyzed post flight, LoRa communications provide
 
 The design outlined in Figure~\ref{fig:flowchart-high_level} is focused solely on the capture, storage, and transmission of data. During flight, real-time processing algorithms will additionally be run to combine the raw sensor data and provide accurate and relevant data for the airbrake subsystem control.
 
-During the high-resolution interval, the system reads data from an IMU (Inertial Measurement Unit) which consists of an accelerometer, gyroscope, and magnetometer sensors. These sensors are essential in determining the aircraft motion and orientation; therefore, a higher sampling rate is required to capture subtle changes accurately. Raw data from sensor registers are then combined with header to form a data frame which will be stored in a buffer array ready to be stored in flash. Sensor data will additionally be kept in RAM to be transmitted during the low-resolution interval.  
+During the high-resolution interval, the system reads data from an IMU (Inertial Measurement Unit) which consists of an accelerometer, gyroscope, and magnetometer sensors. These sensors are essential in determining the aircraft motion and orientation; therefore, a higher sampling rate is required to capture subtle changes accurately. Raw data from sensor registers are then combined with a header to form a dataframe which will be stored in a buffer ready to be stored in flash. Sensor data will additionally be kept in RAM to be transmitted during the low-resolution interval.  
 
-At the low-resolution interval, the system reads data from a barometer, which includes a pressure and temperature sensor to determine altitude. Similar to the high-resolution interval, raw data are used to form a data frame which is added to a buffer array serving as temporary storage before the data is written to flash. Once pressure and temperature data frame is formed and saved to RAM, the buffer array is written to flash and data stored in RAM will be transmitted over LoRa. Switch I/O will also be written to RAM and transmitted to ground control to notify avionic systems if a switch has turned off.  
+At the low-resolution interval, the system reads data from a barometer, which includes a pressure and temperature sensor to determine altitude. Similar to the high-resolution interval, raw data is used to form a dataframe which is added to a buffer serving as temporary storage before the data is written to flash. Once pressure and temperature data frame is formed and saved to RAM, the buffer is written to flash and data stored in RAM will be transmitted over LoRa. 
 
 A number of alternate design methods were considered which included a separate logging interval where transmission and saving to flash occurred over a separate time frame. Although having a different interval provides greater control, flash writing and LoRa transmission occurring during on the low-resolution interval simplifies the design, consolidating data handling tasks.  
 
